# Exploration_Tremaux

./: CMakeLists.txt  README.md  package.xml
include/: graph.cpp  graph.hpp  graph_Regions.hpp  graph_distance.cpp  graph_distance.hpp  graph_old.cpp
launch/: exploration_rviz.rviz  move_base_autolab_new.launch  move_base_cave_new.launch  move_base_no_slam.launch  move_base_only_slam.launch
results/: .~lock.AutoSecond.ods#  .~lock.HamiltonianResults.ods#  .~lock.Results_combined.ods#  .~lock.RouteInspectionPath.ods#  .~lock.TremauxPath.ods#  AreaCoverage.eps  AutoFirst.ods  AutoSecond.ods  Condensed Results.ods  HamiltonianResults.ods  Results.txt  Results_combined.ods  RouteInspectionPath.ods  TremauxPath.ods
results/explo_images/Tight/: Area_Coverage.eps  Error_Evolution.eps
src/: exp_fraenkel.cpp  exp_tremaux.cpp  inc_dude.cpp  pre_explo.cpp
